week5/toi3/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI

   3  expr : LET var EQ expr IN expr
   4       | IF expr THEN expr ELSE expr
   5       | arith_expr EQ arith_expr
   6       | arith_expr LT arith_expr
   7       | expr AND expr
   8       | expr OR expr
   9       | arith_expr

  10  arith_expr : arith_expr PLUS factor_expr
  11             | arith_expr MINUS factor_expr
  12             | factor_expr

  13  factor_expr : factor_expr TIMES atomic_expr
  14              | factor_expr DIV atomic_expr
  15              | atomic_expr

  16  atomic_expr : INT
  17              | BOOL
  18              | ID
  19              | LPAR expr RPAR

  20  var : ID

  21  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (21)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	.  error

	toplevel  goto 9
	expr  goto 10
	arith_expr  goto 11
	factor_expr  goto 12
	atomic_expr  goto 13


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (16)

	.  reduce 16


state 4
	atomic_expr : BOOL .  (17)

	.  reduce 17


state 5
	atomic_expr : ID .  (18)

	.  reduce 18


state 6
	toplevel : LET . var EQ expr SEMISEMI  (2)
	expr : LET . var EQ expr IN expr  (3)

	ID  shift 14
	.  error

	var  goto 15


state 7
	expr : IF . expr THEN expr ELSE expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 16
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 17
	arith_expr  goto 11
	factor_expr  goto 12
	atomic_expr  goto 13


state 8
	atomic_expr : LPAR . expr RPAR  (19)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 16
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 18
	arith_expr  goto 11
	factor_expr  goto 12
	atomic_expr  goto 13


state 9
	%entry% : '\001' toplevel .  (21)

	.  reduce 21


state 10
	toplevel : expr . SEMISEMI  (1)
	expr : expr . AND expr  (7)
	expr : expr . OR expr  (8)

	SEMISEMI  shift 19
	AND  shift 20
	OR  shift 21
	.  error


state 11
	expr : arith_expr . EQ arith_expr  (5)
	expr : arith_expr . LT arith_expr  (6)
	expr : arith_expr .  (9)
	arith_expr : arith_expr . PLUS factor_expr  (10)
	arith_expr : arith_expr . MINUS factor_expr  (11)

	PLUS  shift 22
	MINUS  shift 23
	EQ  shift 24
	LT  shift 25
	IN  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	RPAR  reduce 9
	SEMISEMI  reduce 9
	AND  reduce 9
	OR  reduce 9


state 12
	arith_expr : factor_expr .  (12)
	factor_expr : factor_expr . TIMES atomic_expr  (13)
	factor_expr : factor_expr . DIV atomic_expr  (14)

	TIMES  shift 26
	DIV  shift 27
	IN  reduce 12
	PLUS  reduce 12
	MINUS  reduce 12
	EQ  reduce 12
	LT  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	SEMISEMI  reduce 12
	AND  reduce 12
	OR  reduce 12


state 13
	factor_expr : atomic_expr .  (15)

	.  reduce 15


state 14
	var : ID .  (20)

	.  reduce 20


state 15
	toplevel : LET var . EQ expr SEMISEMI  (2)
	expr : LET var . EQ expr IN expr  (3)

	EQ  shift 28
	.  error


state 16
	expr : LET . var EQ expr IN expr  (3)

	ID  shift 14
	.  error

	var  goto 29


state 17
	expr : IF expr . THEN expr ELSE expr  (4)
	expr : expr . AND expr  (7)
	expr : expr . OR expr  (8)

	THEN  shift 30
	AND  shift 20
	OR  shift 21
	.  error


state 18
	expr : expr . AND expr  (7)
	expr : expr . OR expr  (8)
	atomic_expr : LPAR expr . RPAR  (19)

	RPAR  shift 31
	AND  shift 20
	OR  shift 21
	.  error


state 19
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 20
	expr : expr AND . expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 16
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 32
	arith_expr  goto 11
	factor_expr  goto 12
	atomic_expr  goto 13


state 21
	expr : expr OR . expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 16
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 33
	arith_expr  goto 11
	factor_expr  goto 12
	atomic_expr  goto 13


state 22
	arith_expr : arith_expr PLUS . factor_expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 34
	atomic_expr  goto 13


state 23
	arith_expr : arith_expr MINUS . factor_expr  (11)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 35
	atomic_expr  goto 13


state 24
	expr : arith_expr EQ . arith_expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 36
	factor_expr  goto 12
	atomic_expr  goto 13


state 25
	expr : arith_expr LT . arith_expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 37
	factor_expr  goto 12
	atomic_expr  goto 13


state 26
	factor_expr : factor_expr TIMES . atomic_expr  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	atomic_expr  goto 38


state 27
	factor_expr : factor_expr DIV . atomic_expr  (14)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	atomic_expr  goto 39


state 28
	toplevel : LET var EQ . expr SEMISEMI  (2)
	expr : LET var EQ . expr IN expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 16
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 40
	arith_expr  goto 11
	factor_expr  goto 12
	atomic_expr  goto 13


state 29
	expr : LET var . EQ expr IN expr  (3)

	EQ  shift 41
	.  error


state 30
	expr : IF expr THEN . expr ELSE expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 16
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 42
	arith_expr  goto 11
	factor_expr  goto 12
	atomic_expr  goto 13


state 31
	atomic_expr : LPAR expr RPAR .  (19)

	.  reduce 19


32: shift/reduce conflict (shift 20, reduce 7) on AND
32: shift/reduce conflict (shift 21, reduce 7) on OR
state 32
	expr : expr . AND expr  (7)
	expr : expr AND expr .  (7)
	expr : expr . OR expr  (8)

	AND  shift 20
	OR  shift 21
	IN  reduce 7
	THEN  reduce 7
	ELSE  reduce 7
	RPAR  reduce 7
	SEMISEMI  reduce 7


33: shift/reduce conflict (shift 20, reduce 8) on AND
33: shift/reduce conflict (shift 21, reduce 8) on OR
state 33
	expr : expr . AND expr  (7)
	expr : expr . OR expr  (8)
	expr : expr OR expr .  (8)

	AND  shift 20
	OR  shift 21
	IN  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	RPAR  reduce 8
	SEMISEMI  reduce 8


state 34
	arith_expr : arith_expr PLUS factor_expr .  (10)
	factor_expr : factor_expr . TIMES atomic_expr  (13)
	factor_expr : factor_expr . DIV atomic_expr  (14)

	TIMES  shift 26
	DIV  shift 27
	IN  reduce 10
	PLUS  reduce 10
	MINUS  reduce 10
	EQ  reduce 10
	LT  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	SEMISEMI  reduce 10
	AND  reduce 10
	OR  reduce 10


state 35
	arith_expr : arith_expr MINUS factor_expr .  (11)
	factor_expr : factor_expr . TIMES atomic_expr  (13)
	factor_expr : factor_expr . DIV atomic_expr  (14)

	TIMES  shift 26
	DIV  shift 27
	IN  reduce 11
	PLUS  reduce 11
	MINUS  reduce 11
	EQ  reduce 11
	LT  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	SEMISEMI  reduce 11
	AND  reduce 11
	OR  reduce 11


state 36
	expr : arith_expr EQ arith_expr .  (5)
	arith_expr : arith_expr . PLUS factor_expr  (10)
	arith_expr : arith_expr . MINUS factor_expr  (11)

	PLUS  shift 22
	MINUS  shift 23
	IN  reduce 5
	THEN  reduce 5
	ELSE  reduce 5
	RPAR  reduce 5
	SEMISEMI  reduce 5
	AND  reduce 5
	OR  reduce 5


state 37
	expr : arith_expr LT arith_expr .  (6)
	arith_expr : arith_expr . PLUS factor_expr  (10)
	arith_expr : arith_expr . MINUS factor_expr  (11)

	PLUS  shift 22
	MINUS  shift 23
	IN  reduce 6
	THEN  reduce 6
	ELSE  reduce 6
	RPAR  reduce 6
	SEMISEMI  reduce 6
	AND  reduce 6
	OR  reduce 6


state 38
	factor_expr : factor_expr TIMES atomic_expr .  (13)

	.  reduce 13


state 39
	factor_expr : factor_expr DIV atomic_expr .  (14)

	.  reduce 14


state 40
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (3)
	expr : expr . AND expr  (7)
	expr : expr . OR expr  (8)

	IN  shift 43
	SEMISEMI  shift 44
	AND  shift 20
	OR  shift 21
	.  error


state 41
	expr : LET var EQ . expr IN expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 16
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 45
	arith_expr  goto 11
	factor_expr  goto 12
	atomic_expr  goto 13


state 42
	expr : IF expr THEN expr . ELSE expr  (4)
	expr : expr . AND expr  (7)
	expr : expr . OR expr  (8)

	ELSE  shift 46
	AND  shift 20
	OR  shift 21
	.  error


state 43
	expr : LET var EQ expr IN . expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 16
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 47
	arith_expr  goto 11
	factor_expr  goto 12
	atomic_expr  goto 13


state 44
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 45
	expr : LET var EQ expr . IN expr  (3)
	expr : expr . AND expr  (7)
	expr : expr . OR expr  (8)

	IN  shift 43
	AND  shift 20
	OR  shift 21
	.  error


state 46
	expr : IF expr THEN expr ELSE . expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 16
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 48
	arith_expr  goto 11
	factor_expr  goto 12
	atomic_expr  goto 13


47: shift/reduce conflict (shift 20, reduce 3) on AND
47: shift/reduce conflict (shift 21, reduce 3) on OR
state 47
	expr : LET var EQ expr IN expr .  (3)
	expr : expr . AND expr  (7)
	expr : expr . OR expr  (8)

	AND  shift 20
	OR  shift 21
	IN  reduce 3
	THEN  reduce 3
	ELSE  reduce 3
	RPAR  reduce 3
	SEMISEMI  reduce 3


48: shift/reduce conflict (shift 20, reduce 4) on AND
48: shift/reduce conflict (shift 21, reduce 4) on OR
state 48
	expr : IF expr THEN expr ELSE expr .  (4)
	expr : expr . AND expr  (7)
	expr : expr . OR expr  (8)

	AND  shift 20
	OR  shift 21
	IN  reduce 4
	THEN  reduce 4
	ELSE  reduce 4
	RPAR  reduce 4
	SEMISEMI  reduce 4


State 32 contains 2 shift/reduce conflicts.
State 33 contains 2 shift/reduce conflicts.
State 47 contains 2 shift/reduce conflicts.
State 48 contains 2 shift/reduce conflicts.


22 terminals, 8 nonterminals
22 grammar rules, 49 states
